tests/paczka2/big_fuzzy/79902405.err
Error in line 3: O6znC S945 26,3
Error in line 17: uWrpALliP S945 37,9
Error in line 22: Vxqi S306 4%,6
Error in line 20: O6znC S107 69,8
Error in line 42: Vxqi S945 87,43
Error in line 44: uWrpALliP S945 12,9
Error in line 47: uWrpALliP S306 4J,1
Error in line 54: mBl S306 1,3
Error in line 45: uWrpALliP S306 88,5
Error in line 29: Vxqi S306 157,7
Error in line 53: S306 S107 158,1
Error in line 60: S306 A804 98,9
Error in line 56: uWrpALliP S107 31,3
Error in line 55: mBl S945 76,9
Error in line 84: koB S107 53,1
Error in line 90: S306 S107 77,13
Error in line 88: koB A804 70,5
Error in line 93: uWrpALliP S10, 56,5
Error in line 85: uWrpALliP A804 91,5
Error in line 68: Vxqi S107 44,5
Error in line 97: Vxqi S306 64,5
Error in line 101: mBl S107 1,14
Error in line 94: uWrpALliP S107 165,5
Error in line 91: koB S306 79,5
Error in line 111: S306 S945 56,38
Error in line 126: y36W S306 47,7
Error in line 123: S306 A804 97,8
Error in line 128: O6znC S107 77,4
Error in line 140: Vxqi S107 26,5
Error in line 141: uWrpALliP S107 187,4
Error in line 146: y36W S107 64,6
Error in line 142: Vxqi S945 81,2
Error in line 159: y36W S107 97,1
Error in line 120: mBl A804 389,8
Error in line 155: Vxqi A804 834,1
Error in line 163: mBl S945 97,9
Error in line 176: mBl S107 48,3
Error in line 178: mBl S306 666,5
Error in line 170: y36W S945 39,2
Error in line 189: mBl S107 98,0
Error in line 212: O6znC S945 40,1
Error in line 216: O6znC S107 18,4
Error in line 217: Vxqi A804 98,9
Error in line 230: uWrpALliP S107 6,51
Error in line 233: mBl A804 42,3
Error in line 224: koB S945 38,0
Error in line 242: koB A.04 ..,1
